// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Itaú — caso-âncora real (Henrique Justo Mengue, simulador itau.xlsm) > snapshot completo do caso-âncora (referência para qualquer mudança futura de regra) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 2500618,
  "parcelas": 396,
  "primeiraParcela": 13969.21921357538,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.13,
  "taxaMensal": 0.010236844358176,
  "tipoAmortizacao": "SAC",
  "totalJuros": 2142758.3465757756,
  "totalPago": 3573638.547974774,
  "totalSeguros": 366480.2013989985,
  "ultimaParcela": 2715.138263575003,
  "valorFinanciado": 1054500,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > LTV acima do limite (inelegível) 1`] = `
{
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Financiamento (R$ 450.000) excede 80% do imóvel",
  "parcelas": 420,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 450000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 450000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > LTV no limite de 80% 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4869.621514964152,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 792629.448423768,
  "totalPago": 1269470.2013845309,
  "totalSeguros": 66340.75296076284,
  "ultimaParcela": 986.3463346728347,
  "valorFinanciado": 400000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > PRICE, aquisição residencial padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 3499.8394658072843,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "PRICE",
  "totalJuros": 1061386.6756390512,
  "totalPago": 1536602.639335142,
  "totalSeguros": 114715.96369609064,
  "ultimaParcela": 3385.4444658072844,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > SAC, aquisição residencial padrão 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4267.506325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1113553.1762114642,
  "totalSeguros": 59502.40884066708,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com ITBI incorporado (5% padrão) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4568.5639202788925,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 743090.1078972749,
  "totalPago": 1191511.688797989,
  "totalSeguros": 62921.580900713925,
  "ultimaParcela": 926.2621887557617,
  "valorFinanciado": 375000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com ITBI incorporado (percentual customizado) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4448.1408824047885,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 723274.3716866743,
  "totalPago": 1160328.2837633674,
  "totalSeguros": 61553.912076693276,
  "ultimaParcela": 902.2285303889114,
  "valorFinanciado": 365000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com dataContratacao explícita (idade calculada na data do contrato, não hoje) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4239.716325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1105606.9261207976,
  "totalSeguros": 51556.158750000395,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com override de dfiRate 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4267.506325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1113553.1762114642,
  "totalSeguros": 59502.40884066708,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com override de mipRate (deve usar taxa flat, ignorando a tabela período+idade) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 363317,
  "parcelas": 420,
  "primeiraParcela": 4267.506325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1113553.1762114642,
  "totalSeguros": 59502.40884066708,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com overrides do banco de dados (taxa, LTV, prazo customizados) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 368696,
  "parcelas": 360,
  "primeiraParcela": 4300.981175138621,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.115,
  "taxaMensal": 0.009112468436904,
  "tipoAmortizacao": "SAC",
  "totalJuros": 575680.1935014046,
  "totalPago": 973898.7845938484,
  "totalSeguros": 39218.59109244383,
  "ultimaParcela": 1006.0815665358645,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > com valorAvaliacao diferente de valorImovel (DFI incide sobre avaliação, não sobre o imóvel) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4273.046325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1115879.9762114643,
  "totalSeguros": 61829.20884066711,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > correntista (taxa igual à base no Itaú — sem diferenciação hoje) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4267.506325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1113553.1762114642,
  "totalSeguros": 59502.40884066708,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade 44 anos — fronteira entre valores "estimados" (até 43) e "exatos" (44+) na tabela atual 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 366447,
  "parcelas": 420,
  "primeiraParcela": 4314.826325593634,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1192791.3377776318,
  "totalSeguros": 138740.57040683454,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade jovem (25 anos) — tabela MIP_P1 faixa baixa 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 374120,
  "parcelas": 420,
  "primeiraParcela": 4216.896325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1077233.017037464,
  "totalSeguros": 23182.24966666681,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade no corte duro de 80 anos (inelegível) 1`] = `
{
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": false,
  "maxFinanciavel30": 0,
  "motivoInelegivel": "Idade máxima de 80 anos atingida",
  "parcelas": 12,
  "primeiraParcela": 0,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0,
  "tipoAmortizacao": "SAC",
  "totalJuros": 0,
  "totalPago": 350000,
  "totalSeguros": 0,
  "ultimaParcela": 0,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > idade próxima ao limite (78 anos — prazo reduzido pela regra idade+prazo) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 68884,
  "parcelas": 19,
  "primeiraParcela": 22125.17460383925,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 32947.77992260301,
  "totalPago": 387853.3929668135,
  "totalSeguros": 4430.613044210529,
  "ultimaParcela": 18619.461999592648,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > imóvel usado (Itaú não aplica penalidade de LTV — só a Caixa aplica) 1`] = `
{
  "avisoRenda": false,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 371630,
  "parcelas": 420,
  "primeiraParcela": 4267.506325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1113553.1762114642,
  "totalSeguros": 59502.40884066708,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > prazo longo (420 meses) cruzando a fronteira P1→P2 (mês 121, renovação decenal) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 366447,
  "parcelas": 420,
  "primeiraParcela": 4898.461514964152,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 792629.448423768,
  "totalPago": 1317683.5007701505,
  "totalSeguros": 114554.05234638246,
  "ultimaParcela": 986.3463346728347,
  "valorFinanciado": 400000,
}
`;

exports[`Itaú — regressão antes/depois da migração (Fase 3) > renda baixa (aviso de comprometimento de renda) 1`] = `
{
  "avisoRenda": true,
  "bancoId": "itau",
  "bancoNome": "Itaú",
  "corBanco": "#EC7000",
  "elegivel": true,
  "maxFinanciavel30": 72119,
  "parcelas": 420,
  "primeiraParcela": 4267.506325593633,
  "programa": "SBPE",
  "resultadoId": "itau",
  "taxaAnual": 0.119,
  "taxaMensal": 0.009413651406458,
  "tipoAmortizacao": "SAC",
  "totalJuros": 693550.7673707972,
  "totalPago": 1113553.1762114642,
  "totalSeguros": 59502.40884066708,
  "ultimaParcela": 866.1780428387228,
  "valorFinanciado": 350000,
}
`;
